--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
     <% flash.each do |name, message| %>
-      <p> <%= message %></p>
+      <div class="alert alert-<%= name %>" role="alert"><%= message %></div>
     <% end %>
       <%= yield %>
     </div>
