--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/recipes?sort=prep_time">Sort By Prep Time<span class="sr-only">(current)</span></a></li>
-                <li><a href="/recipes?sort=title">Sort By Title<span class="sr-only">(current)</span></a></li>
+                <li><a href="/recipes">All Recipes</a></li>
+                <li><a href="/recipes?prep_time=asc">Sort By Prep Time Lowest to Highest<span class="sr-only">(current)</span></a></li>
+                <li><a href="/recipes?prep_time=desc">Sort By Prep Time Highest to Lowest<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
